samples/_failures_safe/1761487296_f5b147_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d214e706.c: In function ‘main’:
./samples/SAFE/__tmp_d214e706.c:135:16: error: ‘MAT’ undeclared (first use in this function)
  135 |     Matrix b = MAT
      |                ^~~
./samples/SAFE/__tmp_d214e706.c:135:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d214e706.c:135:5: error: expected ‘,’ or ‘;’ at end of input
  135 |     Matrix b = MAT
      |     ^~~~~~
./samples/SAFE/__tmp_d214e706.c:135:5: error: expected declaration or statement at end of input
